package org.game.protobuf.c2s;

option java_outer_classname = "C2SItemMsg";

// 取得全部物品信息
// code = 515
message GetItems{
	enum MsgID{eMsgID = 515;}; //注意：消息id放最后,以免客户端解析异常
}

// 使用物品
// code = 514
message UseItem{
	repeated ItemInfo items = 1;
	required string heroId = 2;
	required string roleId = 3;
	repeated int32 customParame = 4;//选择性礼包下标
	enum MsgID{eMsgID = 514;}; //注意：消息id放最后,以免客户端解析异常
}

// 使用道具
message ItemInfo{
	required string itemId = 1;
	required int32 num = 2;
}